--- a/competitions/passwords/solutions/010_Maksimov_Sergey.ipynb
+++ b/competitions/passwords/solutions/010_Maksimov_Sergey.ipynb
@@ -383,6 +383,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://raw.githubusercontent.com/jonmeow/puzzling/master/google-books-common-words.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://raw.githubusercontent.com/matijhs/solid-mapreduce-journey/9e0574f3164970e72e57732dfb46be8c68c96f0b/persons-counter/first-names1.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
    "outputs": [],
@@ -11062,7 +11080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
